# awesome-doc-agent

./: .gitignore  README.md  clean_pycache.sh  test_pyright_subprocess.py
app/: .gitignore  app.py  client-test.py  launch-thread.py  requirements.txt  run.json  sample-doc-gen.py  storage-test.py  thread-info.py  thread-stream.py
app/common/: __init__.py  types.py
app/database/: __init__.py  database.py  vector_db.py
app/service/: __init__.py  constants.py  doc_agent.py  doc_agent_manager.py
app/ui/: __init__.py  data_frame.py  document_content.py  login.py  navbar.py  page_content.py  sidebar.py
app/utils/: __init__.py  helpers.py
cli/: create_llm_txt.py  langraph-mcp.py  llms_full.txt  sklearn_vectorstore.parquet
server/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  run-messages-updates-values.txt  sandbox-test.py
server/src/doc_agent/: __init__.py  configuration.py  graph.py  prompts.py  run_graph.py  state.py  utils.py
server/src/generic_chat_agent/: __init__.py  configuration.py  graph.py  prompts.py  state.py
server/src/react_agent/: graph.py
server/src/security/: auth.py
server/src/strategy_agent/: __init__.py  ai_service.py  base_strategy.py  coding_extractors.py  coding_graph.py  coding_judge_feedback_msg.py  coding_judge_graph.py  coding_sandbox.py  coding_utils.py  configuration.py  database.py  graph.py  logger.py  planner_graph.py  planner_judge_graph.py  prompts.py  reflection_graph.py  run_optimization.py  state.py  strategy_planner_graph.py  test_sandbox.py  tools.py  trading_strategy_judge.py  utils.py  vector_db.py
server/src/strategy_agent/data/: frontend.db
server/src/strategy_agent/data/cache/: BTCUSD_5_2024-11-01.csv  BTCUSD_5_2024-11-02.csv  BTCUSD_5_2024-11-03.csv  BTCUSD_5_2024-11-04.csv  BTCUSD_5_2024-11-05.csv  BTCUSD_5_2024-11-06.csv  BTCUSD_5_2024-11-07.csv  BTCUSD_5_2024-11-08.csv  BTCUSD_5_2024-11-09.csv  BTCUSD_5_2024-11-10.csv  BTCUSD_5_2024-11-11.csv  BTCUSD_5_2024-11-12.csv  BTCUSD_5_2024-11-13.csv  BTCUSD_5_2024-11-14.csv  BTCUSD_5_2024-11-15.csv  BTCUSD_5_2024-11-16.csv  BTCUSD_5_2024-11-17.csv  BTCUSD_5_2024-11-18.csv  BTCUSD_5_2024-11-19.csv  BTCUSD_5_2024-11-20.csv  BTCUSD_5_2024-11-21.csv  BTCUSD_5_2024-11-22.csv  BTCUSD_5_2024-11-23.csv  BTCUSD_5_2024-11-24.csv  BTCUSD_5_2024-11-25.csv  BTCUSD_5_2024-11-26.csv  BTCUSD_5_2024-11-27.csv  BTCUSD_5_2024-11-28.csv  BTCUSD_5_2024-11-29.csv  BTCUSD_5_2024-11-30.csv  BTCUSD_5_2024-12-01.csv  BTCUSD_5_2024-12-02.csv  BTCUSD_5_2024-12-03.csv  BTCUSD_5_2024-12-04.csv  BTCUSD_5_2024-12-05.csv  BTCUSD_5_2024-12-06.csv  BTCUSD_5_2024-12-07.csv  BTCUSD_5_2024-12-08.csv  BTCUSD_5_2024-12-09.csv  BTCUSD_5_2024-12-10.csv  (+336 more)
server/src/strategy_agent/logger/: __init__.py  logger.py
server/src/strategy_agent/market_data/: __init__.py  cache.py  data_loader.py  data_loader_incremental.py  preload.py
server/src/strategy_agent/sandbox/: code-interpreter.py  pyright.py  pyrightconfig.json
server/src/strategy_agent/sandbox/sandbox_files/: base_example.py
server/src/strategy_agent/sandbox/sandbox_files/base_strategy/: __init__.py  base_strategy.py  logger.py  trading_logger.py
server/src/strategy_agent/sandbox/sandbox_files/strategy_module/: __init__.py  base_strategy.py  current_data.py  logger.py  optimizer.py  trading_logger.py
server/src/strategy_agent/sandbox/strategy_examples/: rsi_example.py
server/tests/integration_tests/: test_doc_agent.py
